--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -54,48 +54,110 @@
     }
   },
   "advantages": {
-    "title": "Почему Выбирают Узбекистан?",
-    "subtitle": "Познайте идеальное сочетание истории, культуры и приключений",
-    "items": {
-      "history": {
-        "title": "Богатая История",
-        "description": "Более 2000 лет цивилизации вдоль древнего Шелкового пути"
+    "title": "Почему Выбирают Explore Uzbekistan",
+    "subtitle": "Мы предоставляем комплексные туристические решения с вниманием к каждой детали, обеспечивая комфортное, аутентичное и незабываемое путешествие по Узбекистану.",
+    "transport": {
+      "title": "Премиум Транспорт",
+      "description": "Современные кондиционированные автомобили с опытными водителями для комфортных путешествий между городами",
+      "features": ["Доступны быстрые поезда", "Варианты частных автомобилей", "Трансферы в аэропорт включены"]
+    },
+    "hotels": {
+      "title": "Качественные Отели",
+      "description": "Тщательно подобранные места размещения от комфортных 3-звездочных до люксовых 5-звездочных объектов",
+      "features": ["Ежедневный завтрак включен", "Центральное расположение", "Традиционные и современные варианты"]
+    },
+    "guides": {
+      "title": "Экспертные Гиды",
+      "description": "Лицензированные местные гиды с глубокими знаниями истории, культуры и скрытых сокровищ каждого направления",
+      "features": ["Многоязычная поддержка", "Культурные инсайты", "Гибкие маршруты"]
+    },
+    "stats": {
+      "happyTravelers": "Счастливых Путешественников",
+      "satisfactionRate": "Уровень Удовлетворенности",
+      "yearsExperience": "Лет Опыта",
+      "supportAvailable": "Поддержка Доступна"
+    },
+    "benefits": {
+      "licensed": {
+        "title": "Лицензированные и Сертифицированные",
+        "description": "Все наши гиды лицензированы, а наша компания сертифицирована туристическими властями Узбекистана."
       },
-      "architecture": {
-        "title": "Потрясающая Архитектура",
-        "description": "Захватывающая исламская архитектура и замысловатая мозаика"
+      "reviews": {
+        "title": "5-Звездочные Отзывы",
+        "description": "Постоянно получаем 5 звезд от путешественников на TripAdvisor, Google и других платформах."
       },
-      "culture": {
-        "title": "Яркая Культура",
-        "description": "Теплое гостеприимство и аутентичные центральноазиатские традиции"
-      },
-      "adventure": {
-        "title": "Уникальные Приключения",
-        "description": "От пустынных походов до горных восхождений и культурных впечатлений"
+      "insurance": {
+        "title": "Страховка Путешествий",
+        "description": "Комплексная страховка путешествий включена в Премиум и VIP пакеты для спокойствия."
       }
     }
   },
   "packages": {
-    "title": "Туристические Пакеты",
-    "subtitle": "Выберите свое идеальное приключение в Узбекистане",
-    "basic": {
-      "title": "Основной Узбекистан",
-      "description": "Идеальное введение в основные достопримечательности",
-      "duration": "7 дней",
-      "price": "От $999"
+    "title": "Выберите Свое Приключение",
+    "subtitle": "От комфортных групповых туров до люксовых частных впечатлений - у нас есть идеальный пакет, который соответствует вашему стилю путешествий и создает незабываемые воспоминания в Узбекистане.",
+    "standard": {
+      "name": "Стандартный Пакет",
+      "price": "$1,399",
+      "duration": "8 Дней и 7 Ночей",
+      "badge": "Самый Популярный",
+      "description": "Идеальное введение в основные достопримечательности Узбекистана с комфортным размещением и экскурсиями с гидом.",
+      "features": [
+        "Отели 2–3★ с ежедневным завтраком",
+        "Односторонний трансфер в аэропорт",
+        "Общий транспорт между городами",
+        "Групповые экскурсии по основным городам с гидом",
+        "Входные билеты на основные достопримечательности",
+        "Ежедневный завтрак + некоторые приемы пищи по маршруту",
+        "Местная поддержка и базовые советы по путешествиям"
+      ],
+      "includes": "Бюджетное размещение, завтрак, групповые туры, базовая поддержка"
     },
-    "cultural": {
-      "title": "Культурное Наследие",
-      "description": "Глубокое погружение в историю и традиции",
-      "duration": "10 дней",
-      "price": "От $1,499"
+    "premium": {
+      "name": "Премиум Пакет",
+      "price": "$1,899",
+      "duration": "8 Дней и 7 Ночей",
+      "badge": "Лучшая Цена",
+      "description": "Улучшенный опыт с качественными отелями, частным транспортом и аутентичными местными впечатлениями.",
+      "features": [
+        "Отели 4★ с завтраком и 2–3 подобранными приемами пищи",
+        "Туда-обратно трансферы в аэропорт",
+        "Быстрые поезда/частные автомобили между городами",
+        "Частные/малые групповые экскурсии с гидом",
+        "Все входные билеты и посещения музеев",
+        "Местные впечатления (мастер-классы, кулинарный класс, хамам)",
+        "SIM/Wi-Fi по запросу",
+        "Страховка путешествий включена",
+        "Улучшенная поддержка на протяжении всего путешествия"
+      ],
+      "includes": "4-звездочные отели, подобранные приемы пищи, частный транспорт, местные впечатления"
     },
-    "luxury": {
-      "title": "Люкс Шелковый Путь",
-      "description": "Премиум-опыт с эксклюзивным доступом",
-      "duration": "14 дней",
-      "price": "От $2,999"
-    }
+    "vip": {
+      "name": "VIP Пакет",
+      "price": "$2,299",
+      "duration": "8 Дней и 7 Ночей",
+      "badge": "Максимальная Роскошь",
+      "description": "Максимальный люксовый опыт с бутик-отелями, VIP-услугами и эксклюзивным доступом на протяжении всего путешествия.",
+      "features": [
+        "Отели 4★ или 5★ бутик-люкс с питанием",
+        "VIP-обслуживание в аэропорту и частные трансферы",
+        "Эксперт-гид и консьерж 24/7",
+        "Все сборы + эксклюзивные посещения после часов работы",
+        "Частные мероприятия и эксклюзивные впечатления",
+        "Индивидуальный маршрут и эксклюзивные мероприятия",
+        "Премиум страховое покрытие",
+        "Приветственные удобства включены",
+        "Все чаевые включены",
+        "Персональный консьерж-сервис"
+      ],
+      "includes": "Люксовые отели, VIP-услуги, индивидуальные впечатления, полный консьерж"
+    },
+    "additionalInfo": {
+      "satisfaction": "Гарантия Удовлетворенности",
+      "support": "Поддержка Клиентов",
+      "cancellation": "Бесплатная отмена до 48 часов"
+    },
+    "bookNow": "Забронировать",
+    "packageIncludes": "Пакет Включает:"
   },
   "contact": {
     "title": "Начать Путешествие",
@@ -106,27 +168,85 @@
       "phone": "Номер Телефона",
       "package": "Туристический Пакет",
       "travelers": "Количество Путешественников",
-      "dates": "Предпочтительные Даты",
+      "dates": "Предпочтительные Даты Путешествия",
       "message": "Дополнительная Информация",
       "submit": "Отправить Запрос",
       "success": "Спасибо! Мы свяжемся с вами в течение 24 часов, чтобы обсудить ваше приключение в Узбекистане.",
       "note": "Мы ответим в течение 24 часов с персонализированным маршрутом и ценами."
     },
     "info": {
-      "address": "123 Шелковый Путь, Ташкент, Узбекистан",
-      "phone": "+998 71 123 45 67",
-      "email": "info@exploreuzbekistan.uz",
+      "address": "123 Улица Амира Тимура, Ташкент 100000, Узбекистан",
+      "phone": "+998 71 123 4567",
+      "email": "info@exploreuzb.com",
       "hours": "Пн-Пт: 9:00 - 18:00"
+    },
+    "ui": {
+      "planAdventure": "Спланировать приключение",
+      "planAdventureDesc": "Расскажите нам о ваших предпочтениях в путешествиях, и мы создадим идеальный опыт в Узбекистане для вас.",
+      "enterFullName": "Введите ваше полное имя",
+      "enterEmail": "Введите ваш email",
+      "enterPhone": "Введите ваш номер телефона",
+      "selectPackage": "Выберите пакет",
+      "selectNumber": "Выберите количество",
+      "enterDates": "например, март 2025 или весна 2025",
+      "enterMessage": "Расскажите нам о ваших интересах, особых требованиях или любых вопросах...",
+      "thankYou": "Спасибо!",
+      "thankYouDesc": "Ваш запрос получен. Наши специалисты по путешествиям свяжутся с вами в течение 24 часов, чтобы обсудить ваше приключение в Узбекистане и предоставить персонализированные рекомендации.",
+      "expectedResponse": "Ожидаемый ответ: В течение 24 часов"
+    },
+    "packages": {
+      "standard": "Стандартный Пакет - $899",
+      "premium": "Премиум Пакет - $1,499",
+      "vip": "VIP Пакет - $2,299",
+      "custom": "Индивидуальный Пакет"
+    },
+    "travelers": {
+      "1": "1 Человек",
+      "2": "2 Человека",
+      "3-4": "3-4 Человека",
+      "5-8": "5-8 Человек",
+      "9+": "9+ Человек (Группа)"
+    },
+    "contactInfo": {
+      "ourOffice": "Наш Офис",
+      "phoneWhatsapp": "Телефон и WhatsApp",
+      "email": "Email",
+      "businessHours": "Рабочие Часы",
+      "tashkentTime": "(Время Ташкента, GMT+5)",
+      "monFri": "Пн - Пт: 9:00 - 18:00",
+      "satSun": "Сб - Вс: 10:00 - 16:00"
     }
   },
   "footer": {
     "description": "Ваш путь к открытию чудес Узбекистана",
+    "quickLinks": "Быстрые Ссылки",
+    "destinations": "Направления",
+    "contactInfo": "Контактная Информация",
     "links": {
+      "home": "Главная",
+      "historicCities": "Исторические Города",
+      "tourPackages": "Туристические Пакеты",
+      "whyChooseUs": "Почему Мы",
+      "contact": "Контакты",
       "about": "О Нас",
       "tours": "Туры",
-      "contact": "Контакты",
       "privacy": "Политика Конфиденциальности",
-      "terms": "Условия Использования"
+      "terms": "Условия Использования",
+      "cookiePolicy": "Политика Файлов Cookie"
+    },
+    "cities": {
+      "tashkent": "Ташкент - Современная Столица",
+      "samarkand": "Самарканд - Площадь Регистан",
+      "bukhara": "Бухара - Живой Музей",
+      "khiva": "Хива - Древняя Крепость",
+      "termez": "Термез - Буддийское Наследие"
+    },
+    "address": "123 Улица Амира Тимура<br />Ташкент 100000, Узбекистан",
+    "phone": "+998 71 123 4567",
+    "email": "info@exploreuzb.com",
+    "hours": {
+      "weekdays": "Пн-Пт: 9:00-18:00",
+      "weekends": "Сб-Вс: 10:00-16:00"
     },
     "copyright": "© 2024 Исследуй Узбекистан. Все права защищены."
   }
